--- a/QUESTÃO_06.ipynb
+++ b/QUESTÃO_06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,39 @@
     "import numpy as np\n",
     "from IPython.display import display, Math\n",
     "from escrever import *\n",
+    "import sympy as sp\n",
     "esc = escrever()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle H(s) = \\frac{12 s - 3.6}{s^{2} + 35 s + 304}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Utilize H(s) como:\n",
+    "z = np.random.randint(low=-10,high=9,size=1)\n",
+    "p = np.random.randint(10,20,2)\n",
+    "s = sp.symbols('s')\n",
+    "L1 = [(s+l) for l in p]\n",
+    "L2 = [(s-l/10) for l in z]\n",
+    "num = np.random.randint(1,20)*sp.prod(L2).expand()\n",
+    "den = sp.prod(L1).expand()\n",
+    "H = num/den\n",
+    "display(Math('H(s) = ' + sp.latex(H)))"
    ]
   },
   {
@@ -21,7 +53,7 @@
    "source": [
     "$$\n",
     "\\begin{align*}\n",
-    "G(s) &= \\frac{s-0.3}{s^2+35s+304}\\\\\n",
+    "H(s) &= \\frac{12s-3.6}{s^2+35s+304}\\\\\n",
     "\n",
     "\\\\ \\mathbf{\\dot{x}} &= \\begin{bmatrix}\n",
     "    -35 & -304 \\\\ 1 & 0 \n",
@@ -31,7 +63,7 @@
     "\\end{bmatrix} \\mathbf{u}\\\\\n",
     "\n",
     "\\mathbf{y} &= \\begin{bmatrix}\n",
-    "    1 & -0.3\n",
+    "    12 & -3.6\n",
     "\\end{bmatrix} \\mathbf{x}\n",
     "\n",
     "\\end{align*}\n",
@@ -39,21 +71,142 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "T = np.array([[0,304],[3,5]])\n",
-    "F = np.array([[-4,0],[0,-3]])\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\mathbf{T} = \\begin{bmatrix}\n",
+    "    -2 & 1 \\\\ 3 & -1\n",
+    "\\end{bmatrix}\n",
+    "\\end{align*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\mathbf{T} = \\left[\\begin{array}{rr}-2&1\\\\3&-1\\\\\\end{array}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\mathbf{T}^{-1} = \\left[\\begin{array}{rr}1.0&1.0\\\\3.0&2.0\\\\\\end{array}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\mathbf{A}_{\\text{novo}} = \\left[\\begin{array}{rr}1.0&1.0\\\\3.0&2.0\\\\\\end{array}\\right]\\left[\\begin{array}{rr}-35&-304\\\\1&0\\\\\\end{array}\\right]\\left[\\begin{array}{rr}-2&1\\\\3&-1\\\\\\end{array}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\mathbf{A}_{\\text{novo}} = \\left[\\begin{array}{rr}-844.0&270.0\\\\-2530.0&809.0\\\\\\end{array}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\mathbf{B}_{\\text{novo}} = \\left[\\begin{array}{rr}1.0&1.0\\\\3.0&2.0\\\\\\end{array}\\right]\\left[\\begin{array}{rr}12&-3\\\\\\end{array}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\mathbf{B}_{\\text{novo}} = \\left[\\begin{array}{r}2.0\\\\5.0\\\\\\end{array}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\mathbf{C}_{\\text{novo}} = \\left[\\begin{array}{rr}12&-3\\\\\\end{array}\\right]\\left[\\begin{array}{rr}-2&1\\\\3&-1\\\\\\end{array}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\mathbf{C}_{\\text{novo}} = \\left[\\begin{array}{rr}-33&15\\\\\\end{array}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "T = np.array([[-2,1],[3,-1]])\n",
+    "F = np.array([[-35,-304],[1,0]])\n",
     "G = np.ones((2,1))\n",
-    "H = np.array([[2,-1]])\n",
+    "H = np.array([[12,-3]])\n",
     "iT = np.linalg.inv(T)\n",
     "\n",
     "A = (iT@F@T).round(decimals=4)  # (iT @ F) @ T\n",
     "B = (iT@G).round(decimals=4)\n",
     "C = (H@T).round(decimals=4)\n",
-    "iT = iT.round(decimals=4)"
+    "iT = iT.round(decimals=4)\n",
+    "\n",
+    "\n",
+    "display(Math(r'\\mathbf{T} = ' + esc.mat(T)))\n",
+    "display(Math(r'\\mathbf{T}^{-1} = ' + esc.mat(iT) ))\n",
+    "display(Math(r'\\mathbf{A}_{\\text{novo}} = ' + esc.mat(iT) + esc.mat(F) + esc.mat(T)))\n",
+    "display(Math(r'\\mathbf{A}_{\\text{novo}} = ' + esc.mat(A)))\n",
+    "display(Math(r'\\mathbf{B}_{\\text{novo}} = ' + esc.mat(iT) + esc.mat(H)))\n",
+    "display(Math(r'\\mathbf{B}_{\\text{novo}} = ' + esc.mat(B)))\n",
+    "display(Math(r'\\mathbf{C}_{\\text{novo}} = ' + esc.mat(H) + esc.mat(T)))\n",
+    "display(Math(r'\\mathbf{C}_{\\text{novo}} = ' + esc.mat(C)))\n"
    ]
   }
  ],
